# lumina

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/src/backend/: aci_agent.py  aci_gmail_agent.py  aci_gmail_agent_2.py  core_agent.py  main.py  models.py  phone_calling_tool.py
backend/src/backend/aci_functions_definitions/: brave_search_web_search.json  gmail_messages_get.json
backend/src/backend/definitions/: gmail_messages_list.json
backend/tests/: test_aci.py  test_main.py  test_models.py  test_phone_calling_tool.py
frontend/src/frontend/eleven_labs/prompts/: starting_pitch.txt  system_prompt.txt
twillio_call/: package-lock.json
twillio_call/src/: app.ts
